tests/negative/typecheck/call.orng
fn main() -> Int {f()}

fn f()->Char {'d'}